objects/Holiday_Search_Log__c/Holiday_Search_Log__c.object-meta.xml
<CustomObject>
    <label>Holiday Search Log</label>
    <nameField>
        <displayFormat>SL={00000}</displayFormat>
        <label>Holiday Search Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holiday Search Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>