objects/Holiday_Search_Log__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <label>Citizen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SA citizen</fullName>
            </value>
            <value>
                <fullName>Permanent resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>