objects/Holiday_Search_Log__c/fields/Number_of_Times_Search__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_Search__c</fullName>
    <label>Number of Times Search</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>