objects/Holiday_Search_Log__c/fields/SA_Id__c.field-meta.xml
<CustomField>
    <fullName>SA_Id__c</fullName>
    <externalId>true</externalId>
    <label>SA Id</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
</CustomField>